--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "helmet": "^7.1.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mysql2": "^3.6.3",
     "nodemon": "^3.0.1",
     "sequelize": "^6.35.0",
