--- a/compose.yaml
+++ b/compose.yaml
@@ -1,59 +1,6 @@
-# Comments are provided throughout this file to help you get started.
-# If you need more help, visit the Docker Compose reference guide at
-# https://docs.docker.com/go/compose-spec-reference/
-
-# Here the instructions define your application as a service called "server".
-# This service is built from the Dockerfile in the current directory.
-# You can add other services your application may depend on here, such as a
-# database or a cache. For examples, see the Awesome Compose repository:
-# https://github.com/docker/awesome-compose
-#  services:
-  # server:
-    # build:
-      # context: .
-    # environment:
-      # NODE_ENV: production
-    # ports:
-      # - 3009:3009
-
-# The commented out section below is an example of how to define a PostgreSQL
-# database that your application can use. `depends_on` tells Docker Compose to
-# start the database before your application. The `db-data` volume persists the
-# database data between container restarts. The `db-password` secret is used
-# to set the database password. You must create `db/password.txt` and add
-# a password of your choosing to it before running `docker-compose up`.
-#     depends_on:
-#       db:
-#         condition: service_healthy
-#   db:
-#     image: postgres
-#     restart: always
-#     user: postgres
-#     secrets:
-#       - db-password
-#     volumes:
-#       - db-data:/var/lib/postgresql/data
-#     environment:
-#       - POSTGRES_DB=example
-#       - POSTGRES_PASSWORD_FILE=/run/secrets/db-password
-#     expose:
-#       - 5432
-#     healthcheck:
-#       test: [ "CMD", "pg_isready" ]
-#       interval: 10s
-#       timeout: 5s
-#       retries: 5
-# volumes:
-#   db-data:
-# secrets:
-#   db-password:
-#     file: db/password.txt
-
 version: '3.8'
 
-# Define your services
 services:
-  # Your server service
   server:
     build:
       context: .
@@ -64,7 +11,6 @@ services:
     depends_on:
       - db
 
-  # MySQL database service
   db:
     image: mysql:latest
     restart: always
@@ -77,19 +23,26 @@ services:
       - 3306:3306
     volumes:
       - db-data:/var/lib/mysql
- 
-  # Sequelize CLI service
+
   sequelize-cli:
-   build:
-    context: .
-   environment:
-    NODE_ENV: production
-   command: npx sequelize-cli db:migrate
-   depends_on:
-    - db
-   working_dir: /usr/src/app
-   volumes:
-    - .:/usr/src/app
-# Define volumes
+    build:
+      context: .
+    environment:
+      NODE_ENV: production
+    command: >
+      bash -c "
+        while ! nc -z db 3306; do
+          echo 'Waiting for MySQL...'
+          sleep 1
+        done
+        echo 'MySQL is up - executing command'
+        npx sequelize-cli db:migrate
+      "
+    depends_on:
+      - db
+    working_dir: /usr/src/app
+    volumes:
+      - .:/usr/src/app
+
 volumes:
   db-data:
