--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,9 @@
+
 version: '3.8'
 
+# Define your services
 services:
+  # Your server service
   server:
     build:
       context: .
@@ -11,6 +14,7 @@ services:
     depends_on:
       - db
 
+  # MySQL database service
   db:
     image: mysql:latest
     restart: always
@@ -23,26 +27,19 @@ services:
       - 3306:3306
     volumes:
       - db-data:/var/lib/mysql
-
+ 
+  # Sequelize CLI service
   sequelize-cli:
-    build:
-      context: .
-    environment:
-      NODE_ENV: production
-    command: >
-      bash -c "
-        while ! nc -z db 3306; do
-          echo 'Waiting for MySQL...'
-          sleep 1
-        done
-        echo 'MySQL is up - executing command'
-        npx sequelize-cli db:migrate
-      "
-    depends_on:
-      - db
-    working_dir: /usr/src/app
-    volumes:
-      - .:/usr/src/app
-
+   build:
+    context: .
+   environment:
+    NODE_ENV: production
+   command: npx sequelize-cli db:migrate
+   depends_on:
+    - db
+   working_dir: /usr/src/app
+   volumes:
+    - .:/usr/src/app
+# Define volumes
 volumes:
   db-data:
